# QPipe

./: CMakeLists.txt  README.md  exampleqtwidgetextension.ui  piped.pro
examples/: CMakeLists.txt  ExampleStdCoutCapture.cpp  ExampleStdCoutExternalCapture.cpp
include/: ApplicationThread.h  Common.h  ExecutableDispatcher.h  QTExtensionThread.h  XMLWriter.h  exampleqtwidgetextension.h
src/: ApplicationThread.cpp  Common.cpp  ExampleQTWidgetExtension.qml  ExecutableDispatcher.cpp  QTExtensionThread.cpp  StdDirector.hpp  XMLWriter.cpp  exampleqtextension.cpp  exampleqtwidgetextension.cpp  main.cpp
